# heycast

./: Cargo.toml  index.html
src/: chat.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
