[package]
name = "heycast-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.127"
web-sys = { version = "0.3.70", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }

[workspace]
members = ["src-tauri"]
